hphp/test/zend/bad/ext/opcache/tests/bug65845.php
<?php
$Pile['vars'][(string)'toto'] = 'tutu';
var_dump($Pile['vars']['toto']);
?>